[gd_scene load_steps=11 format=2]

[ext_resource path="res://Fonts/Resources/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/Text33.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/Prefab/BasicColorBg.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Prefab/TopFixed.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Math/MathScoreData.gd" type="Script" id=5]
[ext_resource path="res://Fonts/Text48.tres" type="DynamicFont" id=6]
[ext_resource path="res://Scenes/Math/MathMulMap.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/Framework/Panel/PanelSwipe.gd" type="Script" id=8]
[ext_resource path="res://Theme/EmptyBar.tres" type="Theme" id=9]

[sub_resource type="DynamicFont" id=1]
size = 43
font_data = ExtResource( 1 )

[node name="Panel" type="CenterContainer"]
margin_right = 720.0
margin_bottom = 1280.0
rect_min_size = Vector2( 720, 1280 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BasicBg" parent="." instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 720.0
margin_bottom = 1280.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 720.0
margin_bottom = 1280.0
rect_min_size = Vector2( 720, 1280 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopFixed" parent="VBoxContainer" instance=ExtResource( 4 )]

[node name="Menu0" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 720.0
margin_bottom = 128.0

[node name="fixed" type="Control" parent="VBoxContainer/Menu0"]
margin_right = 10.0
margin_bottom = 64.0
rect_min_size = Vector2( 10, 0 )

[node name="BtnBack" type="Button" parent="VBoxContainer/Menu0"]
margin_left = 14.0
margin_right = 138.0
margin_bottom = 64.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="space" type="Control" parent="VBoxContainer/Menu0"]
margin_left = 142.0
margin_right = 372.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BtnLeft" type="Button" parent="VBoxContainer/Menu0"]
margin_left = 376.0
margin_right = 422.0
margin_bottom = 64.0
focus_mode = 0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "<"
flat = true

[node name="space2" type="Control" parent="VBoxContainer/Menu0"]
margin_left = 426.0
margin_right = 656.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BtnRight" type="Button" parent="VBoxContainer/Menu0"]
margin_left = 660.0
margin_right = 706.0
margin_bottom = 64.0
focus_mode = 0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = ">"
flat = true

[node name="fixed2" type="Control" parent="VBoxContainer/Menu0"]
margin_left = 710.0
margin_right = 720.0
margin_bottom = 64.0
rect_min_size = Vector2( 10, 0 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 132.0
margin_right = 720.0
margin_bottom = 1280.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Swipe" type="ScrollContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 710.0
margin_bottom = 1138.0
theme = ExtResource( 9 )
follow_focus = true
scroll_vertical_enabled = false
script = ExtResource( 8 )
scroll_list = [ 0, 704, 1408 ]

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/Swipe"]
margin_right = 2108.0
margin_bottom = 1128.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer/Swipe/HBoxContainer"]
margin_right = 700.0
margin_bottom = 1128.0
rect_min_size = Vector2( 700, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/Swipe/HBoxContainer/ScrollContainer"]
margin_right = 700.0
margin_bottom = 1128.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MathMulMap" parent="VBoxContainer/MarginContainer/Swipe/HBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource( 7 )]
margin_right = 700.0
margin_bottom = 767.0

[node name="LabelSummary" type="RichTextLabel" parent="VBoxContainer/MarginContainer/Swipe/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 771.0
margin_right = 700.0
margin_bottom = 1128.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
text = "sss"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelDatetime" type="RichTextLabel" parent="VBoxContainer/MarginContainer/Swipe/HBoxContainer"]
margin_left = 704.0
margin_right = 1404.0
margin_bottom = 1128.0
rect_min_size = Vector2( 700, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelList" type="RichTextLabel" parent="VBoxContainer/MarginContainer/Swipe/HBoxContainer"]
margin_left = 1408.0
margin_right = 2108.0
margin_bottom = 1128.0
rect_min_size = Vector2( 700, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/Menu0/BtnBack" to="." method="_on_BtnBack_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu0/BtnLeft" to="." method="_on_BtnLeft_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu0/BtnRight" to="." method="_on_BtnRight_pressed"]
[connection signal="gui_input" from="VBoxContainer/MarginContainer/Swipe" to="VBoxContainer/MarginContainer/Swipe" method="_on_Swipe_gui_input"]
[connection signal="scroll_ended" from="VBoxContainer/MarginContainer/Swipe" to="VBoxContainer/MarginContainer/Swipe" method="_on_Swipe_scroll_ended"]
[connection signal="scroll_started" from="VBoxContainer/MarginContainer/Swipe" to="VBoxContainer/MarginContainer/Swipe" method="_on_Swipe_scroll_started"]
